--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "HacktoberFest2019",
   "license": "MIT",
   "scripts": {
+    "build:sass": "node-sass public/css/styles.scss public/css/styles.css",
     "start": "node src/app.js",
     "dev": "nodemon src/app.js -e js.hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
+    "node-sass": "^4.12.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
